# Simyan

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  mkdocs.yaml  prek.toml  pylock.toml  pyproject.toml  tox.ini  zensical.toml
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml  zizmor.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-analysis.yaml  code-analysis.yml  code-formatting.yml  code-testing.yml  linting.yaml  publish-to-pypi.yaml  publish.yml  publishing.yaml  testing.yaml  testing.yml  tox-testing.yaml
Simyan/: __init__.py  arc.py  character.py  character_list.py  concept.py  creator.py  creator_entry.py  creator_list.py  entries.py  exceptions.py  generic_entries.py  image.py  issue.py  issue_entry.py  issue_list.py  item.py  location.py  people.py  publisher.py  publisher_entry.py  publisher_list.py  session.py  sqlite_cache.py  story_arc.py  story_arc_entry.py  story_arc_list.py  team.py  volume.py  volume_entry.py  volume_list.py
Simyan/issue/: __init__.py  issue.py  issue_entry.py
Simyan/publisher/: __init__.py  publisher.py  publisher_entry.py
Simyan/story_arc/: __init__.py  story_arc.py
Simyan/volume/: __init__.py  volume.py
docs/: index.md
docs/simyan/: __init__.md  comicvine.md  errors.md  exceptions.md  index.md  service.md  sqlite_cache.md
docs/simyan/cache/: __init__.md  schemas.md  sqlite_cache.md
docs/simyan/schemas/: __init__.md  _base.md  character.md  concept.md  creator.md  generic_entries.md  issue.md  item.md  location.md  origin.md  power.md  publisher.md  story_arc.md  team.md  volume.md
docs/source/: Issue.rst  Packages.rst  Publisher.rst  Simyan.rst  StoryArc.rst  about.rst.inc  character.rst  conf.py  creator.rst  index.rst  install.rst  modules.rst  packages.rst  simyan.rst  simyan.schemas.rst  volume.rst
simyan/: __init__.py  character.py  character_list.py  comicvine.py  creator.py  creator_list.py  errors.py  exceptions.py  generic_entries.py  issue.py  issue_list.py  publisher.py  publisher_list.py  resource_type.py  service.py  session.py  sqlite_cache.py  story_arc.py  story_arc_list.py  volume.py  volume_list.py
simyan/cache/: __init__.py  schemas.py  sqlite_cache.py
simyan/character/: __init__.py  character_list.py
simyan/creator/: __init__.py  creator.py
simyan/issue/: __init__.py  issue_list.py
simyan/publisher/: __init__.py  publisher.py  publisher_list.py
simyan/schemas/: __init__.py  _base.py  character.py  concept.py  creator.py  generic_entries.py  issue.py  item.py  location.py  origin.py  power.py  publisher.py  story_arc.py  team.py  volume.py
simyan/story_arc/: __init__.py
simyan/volume/: __init__.py
tests/: README.md  __init__.py  characters_test.py  comicvine_test.py  concepts_test.py  conftest.py  creators_test.py  errors_test.py  exceptions_test.py  issues_test.py  items_test.py  limiter_test.py  locations_test.py  origins_test.py  powers_test.py  publishers_test.py  story_arcs_test.py  teams_test.py  test_characters.py  test_concepts.py  test_creators.py  test_exceptions.py  test_init.py  test_issues.py  test_items.py  test_locations.py  test_origins.py  test_powers.py  test_publishers.py  test_story_arcs.py  test_teams.py  test_volumes.py  volumes_test.py
tests/schemas/: characters_test.py  concepts_test.py  creators_test.py  issues_test.py  items_test.py  locations_test.py  origins_test.py  powers_test.py  publishers_test.py  story_arcs_test.py  teams_test.py  volumes_test.py
